Adjusting Java 20 to 21